--- a/index.html
+++ b/index.html
@@ -98,13 +98,17 @@
             <h3 class="about__coding__child">
                 <font color="#84c5ff">development</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">web_app<font color="#ffffe">,</font>bot<font color="#ffffe">,</font>deep_lerning
+                <font color="#e27d58">web_app
+                    <font color="#ffffe">,</font>bot
+                    <font color="#ffffe">,</font>deep_lerning
                 </font>
                 <font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">play_game</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">valorant<font color="#ffffe">,</font>tarkov<font color="#ffffe">,</font>
+                <font color="#e27d58">valorant
+                    <font color="#ffffe">,</font>tarkov
+                    <font color="#ffffe">,</font>
                     blue_protcol
                     <font color="#ffffe">;</font>
             </h3>
@@ -140,8 +144,8 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">PHP</h1>
                             <p class="swiper-explain">
-                                私が学んだ初めてのサーバーサイド言語です。この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、FirebaseでGoogle
-                                Authなどを扱うのはすごく勉強になったと思います。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。</p>
+                                私が学んだ初めてのサーバーサイド言語です。この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、FirebaseでGoogle Authなどを扱うのはすごく勉強になったと思います。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。
+                            </p>
                             <br><br><a href="#">Portfolio2021</a>
                         </div>
                     </div>
