--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <br>
                 <font color="#84c5ff">age</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">18_years</font>
+                <font color="#e27d58">18_years_old</font>
                 <font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">from</font>
@@ -137,16 +137,16 @@
                             <p class="swiper-explain">
                                 このマークアップ言語は一番最初に覚えた物で、2020年に初めてのポートフォリオサイトを作ったことを今でも覚えています。なお、今回のPortfolio2023はSCSS以外の3つの言語で作成しました。その頃は何もかもがわからないことだらけでしたが、それから3年が経ち自分がやっていたゲームのTodoサイトなどをJSを使って一から作り上げることができるようにもなりました。以下にそのサイトを掲載しておきます。
                             </p>
-                            <br><br><a href="#">ゲームのTODOサイト</a>
+                            <br><a href="#">Jump EFT TODOサイト</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">PHP</h1>
                             <p class="swiper-explain">
-                                私が学んだ初めてのサーバーサイド言語です。この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、FirebaseでGoogle Authなどを扱うのはすごく勉強になったと思います。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。
+                                私が学んだ初めてのサーバーサイド言語です。この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。
                             </p>
-                            <br><br><a href="#">Portfolio2021</a>
+                            <a href="#">Jump Portfolio2021</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -165,6 +165,35 @@
                 <!-- 必要に応じてページネーション -->
                 <div class="swiper-pagination"></div>
             </div>
+        </div>
+    </div>
+    <!--  -->
+
+    <!-- contact -->
+    <div class="contact__main">
+        <div class="contact__cotent">
+            <h1 class="contact__title">Contact</h1>
+            <form action="index.html">
+                <h2 class="form__title">件名</h2>
+                <input type="text">
+                <h2 class="form__title">内容</h2>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <button>送信</button>
+            </form>
+        </div>
+    </div>
+    <!--  -->
+
+    <!-- bottom -->
+    <div class="bottom__main">
+        <div class="bottom__contents">
+            <h2 class="bottom__subtitle">CONTENTS</h2>
+        </div>
+        <div class="bottom__contents">
+            <h2 class="bottom__subtitle">SNS</h2>
+        </div>
+        <div class="bottom__contents">
+            <h2 class="bottom__subtitle">OPUS</h2>
         </div>
     </div>
     <!--  -->
