--- a/index.html
+++ b/index.html
@@ -6,27 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main_style.css">
-    <!-- フォント読み込み -->
+    <!-- フォント 読み込み -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
-    <!-- swiper読み込み -->
+    <!-- swiper 読み込み -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <!-- AOS Animation 読み込み -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <title>Portfolio</title>
 </head>
 
 <body>
     <!-- Top -->
-    <div class="top__main">
+    <div class="top__main" id="top__main">
         <h1 class="top__title" id="top__title">Kosei.</h1>
     </div>
     <!--  -->
 
     <!-- About Me -->
-    <div class="about__main">
+    <div class="about__main" id="about__main">
         <h1 class="about__title">About</h1>
-        <div class="about__coding">
+        <div class="about__coding" data-aos="fade-up">
             <h3 class="about__coding__parent">
                 <font color="#ffffe">.</font>about_me {
             </h3>
@@ -69,7 +72,7 @@
             <h3 class="about__coding__parent">}</h3>
         </div>
         <!--  -->
-        <div class="about__coding">
+        <div class="about__coding" data-aos="fade-up">
             <h3 class="about__coding__parent">
                 <font color="#ffffe">.</font>future {
             </h3>
@@ -91,26 +94,21 @@
                 <h3 class="about__coding__parent">}</h3>
         </div>
         <!--  -->
-        <div class="about__coding">
+        <div class="about__coding" data-aos="fade-up">
             <h3 class="about__coding__parent">
                 <font color="#ffffe">.</font>hobby {
             </h3>
             <h3 class="about__coding__child">
                 <font color="#84c5ff">development</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">web_app
-                    <font color="#ffffe">,</font>bot
-                    <font color="#ffffe">,</font>deep_lerning
+                <font color="#e27d58">web_app<font color="#ffffe">,</font>bot<font color="#ffffe">,</font>deep_lerning
                 </font>
                 <font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">play_game</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">valorant
-                    <font color="#ffffe">,</font>tarkov
-                    <font color="#ffffe">,</font>
-                    blue_protcol
-                    <font color="#ffffe">;</font>
+                <font color="#e27d58">valorant<font color="#ffffe">,</font>tarkov<font color="#ffffe">,</font>
+                    blue_protcol<font color="#ffffe">;</font>
             </h3>
             <h3 class="about__coding__parent">}</h3>
         </div>
@@ -118,26 +116,23 @@
     <!--  -->
 
     <!-- skills -->
-    <div class="skills__main">
+    <div class="skills__main" id="skills__main">
         <div class="skills__contents">
-            <h1 class="skills__contents__subtitle">学んだ言語や経緯、またその実用例や挑戦したことなど</h1>
-            <p class="script">
+            <h1 class="skills__contents__subtitle" data-aos="fade-right">学んだ言語や経緯、またその実用例や挑戦したことなど</h1>
+            <p class="script" data-aos="fade-up" data-aos-duration="1000">
                 Python,PHP,Javascript,CSS,HTMLなどを使ったAPPやBOTについて使用例などをここにまとめてあります。<br>上下にスワイプして閲覧できますのでどうぞご覧ください。
             </p>
         </div>
         <div class="skills__contents">
-            <!-- Slider main container -->
-            <div class="swiper">
-                <!-- Additional required wrapper -->
+            <div class="swiper" data-aos="fade-left">
                 <div class="swiper-wrapper">
-                    <!-- Slides -->
                     <div class="swiper-slide">
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">HTML,CSS,JS,SCSS</h1>
                             <p class="swiper-explain">
                                 このマークアップ言語は一番最初に覚えた物で、2020年に初めてのポートフォリオサイトを作ったことを今でも覚えています。なお、今回のPortfolio2023はSCSS以外の3つの言語で作成しました。その頃は何もかもがわからないことだらけでしたが、それから3年が経ち自分がやっていたゲームのTodoサイトなどをJSを使って一から作り上げることができるようにもなりました。以下にそのサイトを掲載しておきます。
                             </p>
-                            <br><a href="#">Jump EFT TODOサイト</a>
+                            <br><a href="https://pxxo.github.io/What-task/" target="_blank">Jump EFT TODOサイト</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -146,7 +141,7 @@
                             <p class="swiper-explain">
                                 私が学んだ初めてのサーバーサイド言語です。この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。
                             </p>
-                            <a href="#">Jump Portfolio2021</a>
+                            <a href="http://kosei.epizy.com/Kosei/" target="_blank">Jump Portfolio2021</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -162,7 +157,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 必要に応じてページネーション -->
                 <div class="swiper-pagination"></div>
             </div>
         </div>
@@ -170,10 +164,10 @@
     <!--  -->
 
     <!-- contact -->
-    <div class="contact__main">
+    <div class="contact__main" id="contact__main">
         <div class="contact__cotent">
             <h1 class="contact__title">Contact</h1>
-            <form action="index.html" autocomplete="off">
+            <form action="index.html" autocomplete="off" data-aos="fade" data-aos-duration="2000">
                 <h2 class="form__title">件名</h2>
                 <input type="text" id="title">
                 <h2 class="form__title">内容</h2>
@@ -188,31 +182,44 @@
     <div class="bottom__main">
         <div class="bottom__contents">
             <h2 class="bottom__subtitle">CONTENTS</h2>
-            <a href="#" class="bottom__links">>Home</a>
-            <a href="#" class="bottom__links">>About</a>
-            <a href="#" class="bottom__links">>Skills</a>
-            <a href="#" class="bottom__links">>Contact</a>
+            <a href="#top__main" class="bottom__links">>Home</a>
+            <a href="#about__main" class="bottom__links">>About</a>
+            <a href="#skills__main" class="bottom__links">>Skills</a>
+            <a href="#contact__main" class="bottom__links">>Contact</a>
         </div>
         <div class="bottom__contents">
             <h2 class="bottom__subtitle">SNS</h2>
-            <a href="#" class="bottom__links">>Twitter</a>
-            <a href="#" class="bottom__links">>Github</a>
+            <a href="https://twitter.com/Pxxo_fps" class="bottom__links" target="_blank">>Twitter</a>
+            <a href="https://github.com/Pxxo" class="bottom__links" target="_blank">>Github</a>
         </div>
         <div class="bottom__contents">
             <h2 class="bottom__subtitle">OPUS</h2>
-            <a href="#" class="bottom__links">>EFT TASKS</a>
-            <a href="#" class="bottom__links">>Portfolio2021</a>
+            <a href="https://pxxo.github.io/What-task/" class="bottom__links" target="_blank">>EFT TASKS</a>
+            <a href="http://kosei.epizy.com/Kosei/" class="bottom__links" target="_blank">>Portfolio2021</a>
         </div>
     </div>
 
     <div class="bottom__produced">
         produced by Kosei
     </div>
-    <!--  -->
+
+    <!-- script -->
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- AOS Animetion -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- locals -->
+    <script src="script/scroll.js"></script>
     <script src="script/mail_send.js"></script>
     <script src="script/swiper_script.js"></script>
     <script src="script/main_script.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <!-- script -->
+
 </body>
 
 </html>
