--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="img/K.ico">
     <link rel="stylesheet" href="style/main_style.css">
     <!-- フォント 読み込み -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
