--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="skills__contents">
             <h1 class="skills__contents__subtitle" data-aos="fade-right">学んだ言語や経緯、またその実用例や挑戦したことなど</h1>
             <p class="script" data-aos="fade-up" data-aos-duration="1000">
-                Python,PHP,Javascript,CSS,HTMLなどを使ったAPPやBOTについて使用例などをここにまとめてあります。<br>上下にスワイプして閲覧できますのでどうぞご覧ください。
+                Python,PHP,Javascript,CSS,HTMLなどを使ったAPPやBOTについて使用例などをここにまとめてあります。<br>上下にスワイプしてご覧ください。<br>※スマートフォンをご利用の方はボタンをご利用ください。
             </p>
         </div>
         <div class="skills__contents">
@@ -158,6 +158,10 @@
                             <p class="swiper-explain">このマークアップ言語は一番最初に覚えた物でここからどんどんとプログラミングにのめり込みました。</p>
                         </div>
                     </div>
+                </div>
+                <div class="swiper__flex">
+                    <div class="swiper__next">Next</div>
+                    <div class="swiper__prev">Back</div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
