--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <!-- skills -->
     <div class="skills__main" id="skills__main">
         <div class="skills__contents">
-            <h1 class="skills__contents__subtitle" data-aos="fade-right">学んだ言語や経緯、またその実用例や挑戦したことなど</h1>
+            <h1 class="skills__contents__subtitle" data-aos="fade-right">学んだ言語や、その言語の制作物についての詳細</h1>
             <p class="script" data-aos="fade-up" data-aos-duration="1000">
                 Python,PHP,Javascript,CSS,HTMLなどを使ったAPPやBOTについて使用例などをここにまとめてあります。<br>上下にスワイプしてご覧ください。<br>※スマートフォンをご利用の方はボタンをご利用ください。
             </p>
