--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                             <p class="swiper-explain">
                                 このマークアップ言語は一番最初に覚えた物で、2020年に初めてのポートフォリオサイトを作ったことを今でも覚えています。なお、今回のPortfolio2023はSCSS以外の3つの言語で作成しました。その頃は何もかもがわからないことだらけでしたが、それから3年が経ち自分がやっていたゲームのTodoサイトなどをJSを使って一から作り上げることができるようにもなりました。以下にそのサイトを掲載しておきます。
                             </p>
-                            <br><a href="https://pxxo.github.io/What-task/" target="_blank">Jump EFT TODOサイト</a>
+                            <a href="https://pxxo.github.io/What-task/" target="_blank">Jump EFT TODOサイト</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">PHP</h1>
                             <p class="swiper-explain">
-                                私が学んだ初めてのサーバーサイド言語です。この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。
+                                この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。
                             </p>
                             <a href="http://kosei.epizy.com/Kosei/" target="_blank">Jump Portfolio2021</a>
                         </div>
@@ -149,13 +149,18 @@
                     <div class="swiper-slide">
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">Python</h1>
-                            <p class="swiper-explain">このマークアップ言語は一番最初に覚えた物でここからどんどんとプログラミングにのめり込みました。</p>
+                            <p class="swiper-explain">
+                                Pythonは主にDiscordのBotの開発やPCの操作の自動化から始まり、音声などの加工やGPSを使った物などを作る際に使用することが多いです。APIなども基本Pythonで使っています。<br>
+                                最近ではWebアプリをPythonで作ることを目標にして開発しています。
+                            </p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">深層学習や機械学習</h1>
-                            <p class="swiper-explain">このマークアップ言語は一番最初に覚えた物でここからどんどんとプログラミングにのめり込みました。</p>
+                            <p class="swiper-explain">
+                                機械学習に初めて触れたのが2021年ごろで、2022年ごろにyolov5というライブラリーを使ってリアルタイム動体検知などをしていました。<br>
+                                最近ではよく話題に上がって来るOpenAIのAPIを使って画像生成などのアプリを作成する機会が多いのですが、それに伴って機械学習や深層学習を学んでいます。</p>
                         </div>
                     </div>
                 </div>
