--- a/index.html
+++ b/index.html
@@ -38,38 +38,31 @@
             <h3 class="about__coding__child">
                 <font color="#84c5ff">name</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">kosei_oketani</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">kosei_oketani</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">age</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">18_years_old</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">18_years_old</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">from</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">tokyo</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">tokyo</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">enrolled</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">salesian_plytechnic</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">salesian_plytechnic</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">major</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">mechanical_and_enginnering</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">mechanical_and_enginnering</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">grade</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">four</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">four</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">birthday</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">february_2nd</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">february_2nd</font><font color="#ffffe">;</font>
             </h3>
             <h3 class="about__coding__parent">}</h3>
         </div>
@@ -81,18 +74,15 @@
             <h3 class="about__coding__child">
                 <font color="#84c5ff">1st_candidate</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">web_engineer</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">web_engineer</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">2nd_candidate</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">server_side_engineer</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">server_side_engineer</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">3rd_candidate</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">deep_lerning_enginner</font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">deep_lerning_enginner</font><font color="#ffffe">;</font>
                 <h3 class="about__coding__parent">}</h3>
         </div>
         <!--  -->
@@ -103,14 +93,11 @@
             <h3 class="about__coding__child">
                 <font color="#84c5ff">development</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">web_app<font color="#ffffe">,</font>bot<font color="#ffffe">,</font>deep_lerning
-                </font>
-                <font color="#ffffe">;</font>
+                <font color="#e27d58">web_app<font color="#ffffe">,</font>bot<font color="#ffffe">,</font>deep_lerning</font><font color="#ffffe">;</font>
                 <br>
                 <font color="#84c5ff">play_game</font>
                 <font color="#ffffe">:</font>
-                <font color="#e27d58">valorant<font color="#ffffe">,</font>tarkov<font color="#ffffe">,</font>
-                    blue_protcol<font color="#ffffe">;</font>
+                <font color="#e27d58">valorant<font color="#ffffe">,</font>tarkov<font color="#ffffe">,</font>blue_protcol<font color="#ffffe">;</font>
             </h3>
             <h3 class="about__coding__parent">}</h3>
         </div>
