--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
         </div>
         <div class="bottom__contents">
             <h2 class="bottom__subtitle">OPUS</h2>
-            <a href="https://pxxo.github.io/What-task/" class="bottom__links" target="_blank">>EFT TASKS</a>
-            <a href="http://kosei.epizy.com/Kosei/" class="bottom__links" target="_blank">>Portfolio2021</a>
+            <a href="https://tarkovapp.net/" class="bottom__links" target="_blank">>Tarkov Guide App</a>
+            <a href="http://pxxo.php.xdomain.jp/portfolio2021/index.php" class="bottom__links" target="_blank">>Portfolio2021</a>
         </div>
     </div>
 
