--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">HTML,CSS,JS,SCSS</h1>
                             <p class="swiper-explain">
-                                このマークアップ言語は一番最初に覚えた物で、2020年に初めてのポートフォリオサイトを作ったことを今でも覚えています。なお、今回のPortfolio2023はSCSS以外の3つの言語で作成しました。その頃は何もかもがわからないことだらけでしたが、それから3年が経ち自分がやっていたゲームのTodoサイトなどをJSを使って一から作り上げることができるようにもなりました。以下にそのサイトを掲載しておきます。
+                                このマークアップ言語は一番最初に覚えた物で、2020年に初めてのポートフォリオサイトを作ったことを今でも覚えています。なお、今回のPortfolio2023は軽い動作やホスティングの容易さなどからHTML,CSS,JSの3つの言語で作成しました。この頃は何もかもがわからないことだらけでしたが、それから3年が経ち自分がやっていたゲームのTodoサイトなどをJSを使って一から作り上げることができるようにもなりました。以下にそのサイトを掲載しておきます。
                             </p>
                             <a href="https://pxxo.github.io/What-task/" target="_blank">Jump EFT TODOサイト</a>
                         </div>
@@ -128,9 +128,10 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">PHP</h1>
                             <p class="swiper-explain">
-                                この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはPortfolio2021などがあります。これも下に掲載しておきます。
+                                この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはTarkov Guide AppやPortfolio2021などです。特にTarkov Guide AppはEFT-Todoの改良版になります。これらも下に掲載しておきます。
                             </p>
-                            <a href="http://kosei.epizy.com/Kosei/" target="_blank">Jump Portfolio2021</a>
+                            <a href="https://tarkovapp.net" target="_blank">Jump Tarkov Guide App</a><br>
+                            <a href="http://pxxo.php.xdomain.jp/portfolio2021/index.php" target="_blank">Jump Portfolio2021</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
