--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">PHP</h1>
                             <p class="swiper-explain">
-                                この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはTarkov Guide AppやPortfolio2021などです。特にTarkov Guide AppはEFT-Todoの改良版になります。これらも下に掲載しておきます。
+                                この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはTarkov Guide AppやPortfolio2021などです。特にTarkov Guide AppはEFT TODOの改良版になります。これらも下に掲載しておきます。
                             </p>
                             <a href="https://tarkovapp.net" target="_blank">Jump Tarkov Guide App</a><br>
                             <a href="http://pxxo.php.xdomain.jp/portfolio2021/index.php" target="_blank">Jump Portfolio2021</a>
