--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
         <div class="bottom__contents">
             <h2 class="bottom__subtitle">OPUS</h2>
-            <a href="https://tarkovapp.net/" class="bottom__links" target="_blank">>Tarkov Guide App</a>
+            <a href="https://tarkovapp.net/" class="bottom__links" target="_blank">>TGA</a>
             <a href="http://pxxo.php.xdomain.jp/portfolio2021/index.php" class="bottom__links" target="_blank">>Portfolio2021</a>
         </div>
     </div>
