--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">HTML,CSS,JS,SCSS</h1>
                             <p class="swiper-explain">
-                                このマークアップ言語は一番最初に覚えた物で、2020年に初めてのポートフォリオサイトを作ったことを今でも覚えています。なお、今回のPortfolio2023は軽い動作やホスティングの容易さなどからHTML,CSS,JSの3つの言語で作成しました。この頃は何もかもがわからないことだらけでしたが、それから3年が経ち自分がやっていたゲームのTodoサイトなどをJSを使って一から作り上げることができるようにもなりました。以下にそのサイトを掲載しておきます。
+                                このマークアップ言語は私が初めて学んだものであり、2020年に初めてのポートフォリオサイトを作成した経験は今でも鮮明に覚えています。なお、今回のPortfolio2023は、軽量な動作とホスティングの容易さを考慮して、HTML、CSS、JSの3つの言語を使用して構築しました。当時は何もかもが理解できない状態でしたが、それから3年が経ち、JSを使用してゲームのTodoサイトなどを一から構築することができるようになりました。以下にそのサイトをご紹介いたします。
                             </p>
                             <a href="https://pxxo.github.io/What-task/" target="_blank">Jump EFT TODOサイト</a>
                         </div>
