--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">PHP</h1>
                             <p class="swiper-explain">
-                                この時はだいたいマークアップやデザインの仕方がわかってきて、そろそろWeb上でDBとか触って見たいと思い始めた頃でした。その頃はマークアップしかわからなかったのでサーバーサイド言語はかなりハードルの高い物でしたが、DBでログイン機能を実装したり、Wordpressでホスティングなどができるようになりました。PHPで作ったものはTarkov Guide AppやPortfolio2021などです。特にTarkov Guide AppはEFT TODOの改良版になります。これらも下に掲載しておきます。
+                                当時、マークアップやデザインの手法にかなり理解が深まり、Web上でデータベースなどに触れてみたいと考えるようになっていました。当初はマークアップしか理解しておらず、サーバーサイド言語は非常に難しいものと感じていましたが、後にデータベースを利用してログイン機能を実装したり、WordPressを使用してホスティングを行うことができるようになりました。PHPを用いて開発した作品には、「Tarkov Guide App」や「Portfolio2021」などがあります。特に「Tarkov Guide App」はEFT TODOの改良版として制作しました。これらの作品も以下に掲載いたします。
                             </p>
                             <a href="https://tarkovapp.net" target="_blank">Jump Tarkov Guide App</a><br>
                             <a href="http://pxxo.php.xdomain.jp/portfolio2021/index.php" target="_blank">Jump Portfolio2021</a>
