--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">Python</h1>
                             <p class="swiper-explain">
-                                Pythonは主にDiscordのBotの開発やPCの操作の自動化から始まり、音声などの加工やGPSを使った物などを作る際に使用することが多いです。APIなども基本Pythonで使っています。<br>
-                                最近ではWebアプリをPythonで作ることを目標にして開発しています。
+                                Pythonは主にDiscordのボットの開発やPCの操作の自動化から始まり、音声の加工やGPSを使用したプロジェクトなどに広く活用しています。APIなども基本的にはPythonを使用しています。<br>
+                                最近では、Pythonを用いてWebアプリを開発することを目標にして積極的に取り組んでいます。
                             </p>
                         </div>
                     </div>
@@ -147,8 +147,8 @@
                         <div class="swiper-slide-content">
                             <h1 class="swiper-title">深層学習や機械学習</h1>
                             <p class="swiper-explain">
-                                機械学習に初めて触れたのが2021年ごろで、2022年ごろにyolov5というライブラリーを使ってリアルタイム動体検知などをしていました。<br>
-                                最近ではよく話題に上がって来るOpenAIのAPIを使って画像生成などのアプリを作成する機会が多いのですが、それに伴って機械学習や深層学習を学んでいます。</p>
+                                私が機械学習に初めて触れたのは2021年ごろであり、その後、2022年ごろにはyolov5というライブラリを用いてリアルタイム動体検知などを実施していました。<br>
+                                最近では、OpenAIのAPIを使用して画像生成などのアプリを開発する機会が増え、それに伴い機械学習や深層学習にも積極的に取り組んでいます。
                         </div>
                     </div>
                 </div>
